# UFO-hamik

./: .clang-format  CMakeLists.txt
src/: Engine.hpp  Scene.hpp  Skeleton.cpp  Systems.hpp  functions.hpp  main.cpp  math.hpp  shaders.hpp
